Fix alignment of main button on download page.
The main button on the download page was not centered due to an incorrect
width on its container. The rounded corners on the right-hand side were
missing too, so I restored them.

--- a/web-app/less/downloads.less
+++ b/web-app/less/downloads.less
@@ -119,7 +119,7 @@
                 .btn-group {
                     .clearfix();
                     position: relative;
-                    width: 330px;
+                    width: 280px;
                     margin: 0 auto;
                     &.open {
                         .dropdown-menu {
@@ -133,7 +133,7 @@
                 .btn {
                     padding: 0 20px;
                     line-height: 37px;
-                    .border-radius(40px 0 0 40px);
+                    .border-radius(40px);
                     display: block;
                     float: left;
                     width: 240px;
